@@ -1,0 +1,11 @@
+DEFINED_PHASES=-
+DESCRIPTION=Meta ebuild for LXQt, the Lightweight Desktop Environment
+EAPI=5
+HOMEPAGE=http://lxqt.org/
+IUSE=admin +filemanager +icons lightdm lximage minimal +oxygen +policykit powermanagement sddm ssh-askpass
+KEYWORDS=~amd64 ~x86
+LICENSE=metapackage
+RDEPEND=>=lxde-base/lxmenu-data-0.1.2 ~lxqt-base/lxqt-about-0.9.0 =lxqt-base/lxqt-common-0.9* ~lxqt-base/lxqt-config-0.9.0 ~lxqt-base/lxqt-globalkeys-0.9.0 ~lxqt-base/lxqt-notificationd-0.9.0 ~lxqt-base/lxqt-panel-0.9.0 ~lxqt-base/lxqt-qtplugin-0.9.0 ~lxqt-base/lxqt-runner-0.9.0 ~lxqt-base/lxqt-session-0.9.0 virtual/ttf-fonts admin? ( ~lxqt-base/lxqt-admin-0.9.0 ) filemanager? ( ~x11-misc/pcmanfm-qt-0.9.0 ) icons? ( oxygen? ( kde-base/oxygen-icons ) !oxygen? ( virtual/freedesktop-icon-theme ) ) lightdm? ( x11-misc/lightdm ) lximage? ( media-gfx/lximage-qt ) !minimal? ( x11-wm/openbox x11-misc/obconf-qt ) policykit? ( ~lxqt-base/lxqt-policykit-0.9.0 || ( sys-auth/consolekit[policykit(-)] sys-apps/systemd[policykit(-)] ) ) powermanagement? ( ~lxqt-base/lxqt-powermanagement-0.9.0 ) sddm? ( >=x11-misc/sddm-0.10.0 ) ssh-askpass? ( ~lxqt-base/lxqt-openssh-askpass-0.9.0 )
+REQUIRED_USE=oxygen? ( icons )
+SLOT=0
+_md5_=5a537c7226f7abc90add1169d7bae3a1
